--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,7 @@
     "prestart": "npm run build",
     "start": "node -r source-map-support/register .",
     "prepublishOnly": "npm run test",
-    "dev": "nodemon server.js"
+    "start:dev": "nodemon server.js"
   },
   "repository": {
     "type": "git"
@@ -58,6 +58,8 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^3.2.4",
+    "@loopback/authorization": "^0.4.6",
     "@loopback/boot": "^1.6.0",
     "@loopback/context": "^1.25.0",
     "@loopback/core": "^1.12.0",
@@ -65,20 +67,26 @@
     "@loopback/repository": "^1.16.0",
     "@loopback/rest": "^1.25.0",
     "@loopback/rest-explorer": "^1.4.6",
-    "@loopback/service-proxy": "^1.3.13"
+    "@loopback/security": "^0.1.9",
+    "@loopback/service-proxy": "^1.3.13",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "loopback-connector-mysql": "^5.4.2"
   },
   "devDependencies": {
     "@loopback/build": "^3.0.0",
-    "source-map-support": "^0.5.16",
-    "@loopback/testlab": "^1.10.0",
-    "@types/node": "^10.17.6",
-    "@typescript-eslint/parser": "^2.10.0",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@loopback/eslint-config": "^5.0.0",
+    "@loopback/testlab": "^1.10.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^10.17.6",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
     "eslint-plugin-mocha": "^6.2.2",
+    "nodemon": "^2.0.2",
+    "source-map-support": "^0.5.16",
     "typescript": "~3.7.3"
   }
 }
