--- a/client-web/rt-app/.vscode/settings.json
+++ b/client-web/rt-app/.vscode/settings.json
@@ -3,5 +3,13 @@
     "**/.git/objects/**": true,
     "**/.git/subtree-cache/**": true,
     "**/node_modules/**": true
+  },
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/node_modules/**": true
   }
 }
