--- a/client-web/rt-app/package.json
+++ b/client-web/rt-app/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^16.8.0",
     "@types/react-redux": "^7.0.0",
     "@types/react-router": "^4.4.3",
+    "@types/react-star-rating-component": "^1.4.0",
     "@types/redux-actions": "2.3.1",
     "@types/webpack": "^4.4.23",
     "@types/webpack-env": "1.13.6",
@@ -70,6 +71,7 @@
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-thunk": "^2.3.0"
