--- a/server/Org.ERM.WebApi/Org.ERM.WebApi.csproj
+++ b/server/Org.ERM.WebApi/Org.ERM.WebApi.csproj
@@ -5,9 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="7.0.0" />
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.0.1" />
+    <!-- <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" /> -->
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
+    <!-- <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="3.1.1" /> -->
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
     <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="3.1.0" /> -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
