--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,3 +40,14 @@ services:
       MYSQL_DATABASE: org-erm
       MYSQL_USER: user
       MYSQL_PASSWORD: password
+  # client-web:
+  #   build:
+  #     dockerfile: ./Dockerfile
+  #     context: ./client-web
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - ./client-web/node_modules:/app/node_modules
+  #     - ./client-web:/app
+  #   environment:
+  #     - NODE_ENV=development
